{{$NEXT}}
	- Broken watch mode fixed (GitHub issue #108).

0.10.0 - 2023-07-14
	- Switch to AnyEvent::Filesys::Watcher:
	  * support for MSWin32
	  * less dependencies because not based on Moo
	  * less file system scans on macOS
	  * lower latency values possible (change latency in _config.yaml to 0.1
	    if you are on a Mac)
	- Manually force version 0.000074 of ExtUtils::Duktape::XS.
	- There is a new template variable `rawContent` with the
	  unexpanded content from the asset.
	- Post-processors (docs pending).
	- Changed files are now displayed in the logs by default.
	- New virtual list methods `shuffle` and `sample`.
	- New plug-in methods `basename`, `dirname`, and `fileparse`.
	- New template variable `content_body` with everything but the first
	  paragraph.
	- New template variable `excerpt_html` with the HTML version of the
	  excerpt.
	- No longer depends on Moose (because Markdown::Pod has been removed as a
      depency).
	- Breaking changes:
	  * Local configuration variables must start with an underscore.

0.9.8 - 2020-04-13
	- Use AnyEvent::Filesys::Notify again
	- Issues resolved:
	  * https://github.com/gflohr/qgoda/issues/88
	  * https://github.com/gflohr/qgoda/issues/81
	  * https://github.com/gflohr/qgoda/issues/34

0.9.6 - 2018-12-03
	- New versioning scheme YY.MM.COUNT.
	- Replaced nested data structure with simpler structure without cyclic references.
	- Programmatic stop in watch mode: Drop a file "_stop" and optionally write the reason for the termination into it.
	- Compatibility with Perl 5.18.
	- The docker container no longer runs as root but as unpriviliged user qgoda in group qgoda.
	- The container is now based on an ubuntu image and using the system perl in order to save space and build time.
	- Increased test coverage to 80 %.
	- Issues fixed:
	  * https://github.com/gflohr/qgoda/issues/79
	  * https://github.com/gflohr/qgoda/issues/77
	  * https://github.com/gflohr/qgoda/issues/74

0.9.5 - 2018-12-01