@@ -2,12 +2,17 @@
 	- Broken watch mode fixed (GitHub issue #108).
 
 0.10.0 - 2023-07-14
+	- Breaking changes:
+      * The name of the configuration file is now "_qgoda.yaml", "_qgoda.yml",
+        or "_qgoda.json"!
+	  * Private configuration variables must start with an underscore.
 	- Switch to AnyEvent::Filesys::Watcher:
 	  * support for MSWin32
 	  * less dependencies because not based on Moo
 	  * less file system scans on macOS
 	  * lower latency values possible (change latency in _config.yaml to 0.1
 	    if you are on a Mac)
+    - Works now in Windows.
 	- Manually force version 0.000074 of ExtUtils::Duktape::XS.
 	- There is a new template variable `rawContent` with the
 	  unexpanded content from the asset.
@@ -21,8 +26,6 @@
 	  excerpt.
 	- No longer depends on Moose (because Markdown::Pod has been removed as a
       depency).
-	- Breaking changes:
-	  * Local configuration variables must start with an underscore.
 
 0.9.8 - 2020-04-13
 	- Use AnyEvent::Filesys::Notify again
